@@ -34,8 +34,8 @@ extern "C" {
 #define MagickLibAddendum  "-8"
 #define MagickLibInterface  5
 #define MagickLibMinInterface  5
-#define MagickReleaseDate  "2012-01-18"
-#define MagickChangeDate   "20120117"
+#define MagickReleaseDate  "2012-01-19"
+#define MagickChangeDate   "20110119"
 #define MagickAuthoritativeURL  "http://www.imagemagick.org"
 #if defined(MAGICKCORE_OPENMP_SUPPORT)
 #define MagickOpenMPFeature  "OpenMP "
